# projet_asr_blup

./: CMakeLists.txt  README.md  bindings.cpp  blup  blup_core.py  blup_server.py  compile_and_run.sh  ezv_trace_current.evt  mylib.c  mylib.h  one_cpu.evt  recup_data.py  run.sh  trace.fxt
sample_traces/: mpi_ring_32_ranks.csv  mpi_ring_4_ranks.csv  mpi_ring_4_ranks_wholes_sequences.csv  npb_mg.A.csv
sample_traces/choleski_small/: paje.trace_blup.csv
tools/: convert_starpu.py
